--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,10 @@
     @apply bg-background text-foreground;
   }
 }
+/* body{
+  background-image: url("images/mountain_background.jpg");
+  background-size: cover;         
+  background-position: center;   
+  background-repeat: no-repeat;  
+  background-attachment: fixed;
+} */
